--- a/assignment1.html
+++ b/assignment1.html
@@ -62,7 +62,7 @@
 		<h2 style="color: #18308A; text-align: center;font-style: normal;"> KERALA CUISINE </h2>
 		<P style="font-weight:bold; margin-left:50px"> SOME FAMOUS FOOD ITEMS: </P>
 		<pre>
-		1. Idiyappam With  <br>
+		1. Idiyappam With Kadala Curry <br>
 		<img style="width:40%" src="a1f1.jpg"><br>
 		2. Puttu And Kadala Curry<br>
 		<img style="width:40%" src="a1f2.jpg"><br>
